[tool.poetry]
name = "ms-azure-invoices-api"
version = "0.1.0"
description = ""
authors = ["petrKantek <57535586+petrKantek@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ms_azure_invoices_api"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
pydantic = "^1.10.7"
azure-servicebus = "^7.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
